# organicmaps

./: requirements.txt
.github/workflows/: coverage-check.yaml  linux-check.yaml
data/: copyright.html  countries_names.txt
data/countries-strings/ar.json/: localize.json
data/countries-strings/az.json/: localize.json
data/countries-strings/be.json/: localize.json
data/countries-strings/ca.json/: localize.json
data/countries-strings/cs.json/: localize.json
data/countries-strings/da.json/: localize.json
data/countries-strings/de.json/: localize.json
data/countries-strings/en.json/: localize.json
data/countries-strings/es.json/: localize.json
data/countries-strings/et.json/: localize.json
data/countries-strings/eu.json/: localize.json
data/countries-strings/fi.json/: localize.json
data/countries-strings/fr.json/: localize.json
data/countries-strings/he.json/: localize.json
data/countries-strings/hu.json/: localize.json
data/countries-strings/id.json/: localize.json
data/countries-strings/it.json/: localize.json
data/countries-strings/ja.json/: localize.json
data/countries-strings/ko.json/: localize.json
data/countries-strings/mr.json/: localize.json
data/countries-strings/nb.json/: localize.json
data/countries-strings/nl.json/: localize.json
data/countries-strings/pl.json/: localize.json
data/countries-strings/pt.json/: localize.json
data/countries-strings/ro.json/: localize.json
data/countries-strings/ru.json/: localize.json
data/countries-strings/sk.json/: localize.json
data/countries-strings/sv.json/: localize.json
data/countries-strings/th.json/: localize.json
data/countries-strings/tr.json/: localize.json
data/countries-strings/uk.json/: localize.json
data/countries-strings/vi.json/: localize.json
data/countries-strings/zh-Hans.json/: localize.json
data/countries-strings/zh-Hant.json/: localize.json
data/strings/: strings.txt
docs/: INSTALL.md  TRANSLATIONS.md
qt/: CMakeLists.txt  about.cpp
qt/ui/: about_dialog.slint
tools/python/: InstrumentsTraceParser.py  booking_hotels_quality.py  categories_converter.py  city_radius.py  clean_strings_txt.py  generate_styles_override.py  google_maps_bookmarks.py  mwm_downloader.py  opentable_restaurants.py  po_parser.py  recalculate_geom_index.py  road_runner.py  strings_txt_from_csv.py  strings_utils.py  taxi_csv_to_json.py  testlog_to_xml_converter.py  translate.py  tts_languages.py  vector_drawable_to_svg.py
tools/python/airmaps/: __init__.py
tools/python/airmaps/dags/: build_coastline.py
tools/python/airmaps/instruments/: settings.py
tools/python/category_consistency/: check_consistency.py  omim_parsers.py
tools/python/data/borders/: __init__.py  setup.py
tools/python/descriptions/: __main__.py  descriptions_downloader.py
tools/python/maps_generator/: update_generation_order.py
tools/python/maps_generator/generator/: diffs.py  settings.py  status.py
tools/python/maps_generator/utils/: file.py
tools/python/mwm/: __init__.py  __main__.py  decode_id.py  dump_mwm.py  find_feature.py  ft2osm.py  mwm_feature_compare.py  mwm_interface.py  mwm_pygen.py  mwm_python.py  mwm_test.py
tools/python/post_generation/: __main__.py  hierarchy_to_countries.py  inject_promo_ids.py
tools/python/routing/src/: graph_scripts.py  utils.py
tools/python/stylesheet/: drules_dump.py  drules_merge.py  drules_to_mapcss.py
tools/python/test_server/server/: ResponseProvider.py  SiblingKiller.py  testserver.py  tornado_handler.py
tools/python/transit/: transit_color_palette.py
xcode/omim.xcworkspace/: contents.xcworkspacedata
